Reformulei o design do projeto

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <header>
-        <img src="imagens/frente 3.png" alt="Cidadão Ambiental" class="header-img">
-        <nav>
+        <div class="logo">
+            <img src="imagens/logoCidadaoAmbiental.png" alt="Cidadão Ambiental" class="header-img">
+        </div>
+        <nav class="navbar">
             <ul>
                 <li><a href="#home" id="homeLink">Home / Relatar Problema</a></li>
                 <li><a href="#admin" id="adminLink">Admin</a></li>
                 <li><a href="quemsomos.html">Quem Somos</a></li>
             </ul>
         </nav>
+        <div class="btnsLogins">
+
+        </div>
     </header>
     <main>
         <section id="about">
