Modifiquei novamente o estilo da página

--- a/index.html
+++ b/index.html
@@ -14,27 +14,49 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#home" id="homeLink">Home / Relatar Problema</a></li>
-                <li><a href="#admin" id="adminLink">Admin</a></li>
-                <li><a href="quemsomos.html">Quem Somos</a></li>
+                <li><a href="/index.html" id="">Home</a></li>
+                <li><a href="" id="">Novidades</a></li>
+                <li><a href="quemsomos.html">Sobre nós</a></li>
             </ul>
         </nav>
         <div class="btnsLogins">
-
+            <button class="btnLogin">Login / Cadastro</button>
+            <button class="btnBaixar">Baixar</button>
         </div>
     </header>
     <main>
         <section id="about">
             <img src="imagens/front.png" alt="Sobre nós" class="about-img">
         </section>
-        
-        <section id="contact">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco pelo email: contato@cidadaoambiental.org</p>
-        </section>
     </main>
     <footer>
-        <p>&copy; 2025 Cidadão Ambiental. Todos os direitos reservados.</p>
+        <div class="rodape">
+            <div class="linksUteis">
+                <div class="linksOrganizados">
+                    <p>Links Uteis</p>
+                    <a href="">Suporte</a>
+                    <a href="">Sobre nós</a>
+                    <a href="">Novidades</a>
+                    <a href="">Aplicativo desktop</a>
+                    <a href="">Aplicativo mobile</a>
+                </div>
+            </div>
+            <div class="redesSociais">
+                <div class="redesSociaisOrganizadas">
+                    <div class="redeSocialCircle">1</div>
+                    <div class="redeSocialCircle">2</div>
+                    <div class="redeSocialCircle">3</div>
+                </div>
+            </div>
+            <div class="maisInformacoes">
+                <div class="emailContato">
+                    <p>Entre em contato conosco pelo email: contato@cidadaoambiental.org</p>
+                </div>
+                <div class="copyright">
+                    <p>&copy; 2025 Cidadão Ambiental. Todos os direitos reservados.</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="scripts.js"></script>
 </body>
