--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <a href="">Suporte</a>
                     <a href="">Sobre nós</a>
                     <a href="">Novidades</a>
-                    <a href="">Aplicativo desktop</a>
-                    <a href="">Aplicativo mobile</a>
+                    <!-- <a href="">Aplicativo desktop</a> -->
+                    <!-- <a href="">Aplicativo mobile</a> -->
                 </div>
             </div>
             <div class="redesSociais">
