Modifiquei o estilo e responsividade da página

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cidadão Ambiental</title>
     <link rel="stylesheet" href="styles/index.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward_ios" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'> 
 
 </head>
 <body>
@@ -20,8 +23,10 @@
             </ul>
         </nav>
         <div class="btnsLogins">
-            <button class="btnLogin">Login / Cadastro</button>
-            <button class="btnBaixar">Baixar</button>
+            <button class="btnLogin">Login / Cadastro <span class="material-symbols-outlined">arrow_forward_ios</span></button>
+            <button class="btnBaixar">Baixar <span class="material-symbols-outlined">
+                download
+                </span></button>
         </div>
     </header>
     <main>
@@ -43,9 +48,9 @@
             </div>
             <div class="redesSociais">
                 <div class="redesSociaisOrganizadas">
-                    <div class="redeSocialCircle">1</div>
-                    <div class="redeSocialCircle">2</div>
-                    <div class="redeSocialCircle">3</div>
+                    <div class="redeSocialCircle"><i class="fi fi-brands-instagram"></i></div>
+                    <div class="redeSocialCircle"><i class="fi fi-brands-twitter"></i></div>
+                    <div class="redeSocialCircle"><i class="fi fi-brands-facebook"></i></div>
                 </div>
             </div>
             <div class="maisInformacoes">
