Fiz modificações no estilo do home e sobre nós

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -6,16 +6,13 @@
     <title>Cidadão Ambiental - Quem Somos</title>
     <link rel="stylesheet" href="styles/quemsomos.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#admin" id="adminLink">Novidades</a></li>
-                <li><a href="quemsomos.html">Quem Somos</a></li>
-            </ul>
-        </nav>
+        <div class="btnIrIndex">
+            <span class="material-symbols-outlined">arrow_back</span>
+        </div>
         <h1>Quem Somos</h1>
     </header>
     <main>
@@ -59,7 +56,7 @@
                 <li>Marcos Vinícius Abreu Cosmo</li>
                 <li>Arthur Honorato da Silva Araujo</li>
                 <li>Darlison França do Vale</li>
-                <li>Emersom Bruno</li>
+                <li>Emerson Bruno</li>
                 <li>João Torres</li>
             </ul>
         </section>
