--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="/index.html" id="">Home</a></li>
                 <li><a href="" id="">Novidades</a></li>
+                <li><a href="" id="">Suporte</a></li>
                 <li><a href="quemsomos.html">Sobre nós</a></li>
             </ul>
         </nav>
@@ -40,7 +40,7 @@
                 <div class="linksOrganizados">
                     <p>Links Uteis</p>
                     <a href="">Suporte</a>
-                    <a href="">Sobre nós</a>
+                    <a href="quemsomos.html">Sobre nós</a>
                     <a href="">Novidades</a>
                     <!-- <a href="">Aplicativo desktop</a> -->
                     <!-- <a href="">Aplicativo mobile</a> -->
