--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cidadão Ambiental</title>
     <link rel="stylesheet" href="styles/index.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward_ios" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'> 
-
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
 </head>
 <body>
     <header>
@@ -25,13 +23,72 @@
         <div class="btnsLogins">
             <button class="btnLogin">Login / Cadastro <span class="material-symbols-outlined">arrow_forward_ios</span></button>
             <button class="btnBaixar">Baixar <span class="material-symbols-outlined">
-                download
-                </span></button>
+                    download
+                    </span></button>
         </div>
     </header>
     <main>
-        <section id="about">
-            <img src="imagens/front.png" alt="Sobre nós" class="about-img">
+        <section id="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">Sua Voz Faz a Diferença na Nossa Cidade</h1>
+                <p class="hero-subtitle">Reporte problemas urbanos de forma fácil e rápida e ajude a construir um ambiente melhor para todos.</p>
+                <div class="hero-buttons">
+                    <button class="btnPrimary">Denunciar Agora</button>
+                    <button class="btnSecondary">Saiba Mais</button>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="imagens/cidadeIlustração-min.jpg" class="hero-img">
+            </div>
+        </section>
+
+        <section id="how-it-works">
+            <h2 class="section-title">Como Funciona? É Simples!</h2>
+            <div class="steps-container">
+                <div class="step-card">
+                    <span class="material-symbols-outlined step-icon">add_location_alt</span>
+                    <h3 class="step-title">1. Registre o Problema</h3>
+                    <p class="step-description">Descreva o que você encontrou e adicione fotos para facilitar a identificação.</p>
+                </div>
+                <div class="step-card">
+                    <span class="material-symbols-outlined step-icon">send</span>
+                    <h3 class="step-title">2. Envie sua Denúncia</h3>
+                    <p class="step-description">Sua denúncia é enviada diretamente para os órgãos competentes da prefeitura.</p>
+                </div>
+                <div class="step-card">
+                    <span class="material-symbols-outlined step-icon">track_changes</span>
+                    <h3 class="step-title">3. Acompanhe o Status</h3>
+                    <p class="step-description">Receba atualizações sobre o andamento da sua denúncia até a solução.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="benefits">
+            <h2 class="section-title">Por que usar o Cidadão Ambiental?</h2>
+            <div class="benefit-cards-container">
+                <div class="benefit-card">
+                    <span class="material-symbols-outlined benefit-icon">thumb_up</span>
+                    <h3 class="benefit-title">Participação Ativa</h3>
+                    <p class="benefit-description">Contribua diretamente para a melhoria da sua cidade.</p>
+                </div>
+                <div class="benefit-card">
+                    <span class="material-symbols-outlined benefit-icon">speed</span>
+                    <h3 class="benefit-title">Agilidade na Solução</h3>
+                    <p class="benefit-description">Ajude a prefeitura a resolver problemas de forma mais rápida e eficiente.</p>
+                </div>
+                <div class="benefit-card">
+                    <span class="material-symbols-outlined benefit-icon">visibility</span>
+                    <h3 class="benefit-title">Transparência</h3>
+                    <p class="benefit-description">Acompanhe o progresso da sua denúncia e as ações da prefeitura.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="about" style="background-color: #8FBC8F; padding: 20px; border-radius: 25px; text-align: center;">
+            <!-- <img src="imagens/front.png" alt="Sobre nós" class="about-img" style="max-width: 80%; height: auto; object-fit: contain; border-radius: 15px; margin-bottom: 20px;"> -->
+            <h2 class="section-title" style="font-size: 1.8em;">Sobre o Cidadão Ambiental</h2>
+            <p style="color: white; line-height: 1.6;">O Cidadão Ambiental é uma plataforma criada para facilitar a comunicação entre os cidadãos e a prefeitura da nossa cidade. Nosso objetivo é tornar o processo de denúncia de problemas urbanos mais ágil e transparente, permitindo que você contribua ativamente para um ambiente melhor e uma cidade mais bem cuidada.</p>
+            <p style="color: white; line-height: 1.6;">Ao utilizar o Cidadão Ambiental, você tem a oportunidade de reportar incidentes de forma simples, acompanhar o progresso da resolução e fazer a diferença na qualidade de vida de toda a comunidade.</p>
         </section>
     </main>
     <footer>
@@ -42,9 +99,7 @@
                     <a href="">Suporte</a>
                     <a href="quemsomos.html">Sobre nós</a>
                     <a href="">Novidades</a>
-                    <!-- <a href="">Aplicativo desktop</a> -->
-                    <!-- <a href="">Aplicativo mobile</a> -->
-                </div>
+                    </div>
             </div>
             <div class="redesSociais">
                 <div class="redesSociaisOrganizadas">
