Funcionalidade simples javascript

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="btnIrIndex">
+        <div class="btnIrIndex" onclick="enviarParaLink('index.html')">
             <span class="material-symbols-outlined">arrow_back</span>
         </div>
         <h1>Quem Somos</h1>
@@ -71,5 +71,6 @@
     <footer>
         <p>&copy; 2025 Cidadão Ambiental. Todos os direitos reservados.</p>
     </footer>
+    <script src="script/quemsomos.js"></script>
 </body>
 </html>
