Mudei o estilo da tela de login e cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="signup-form">
-
+        <h1>Cadastro</h1>
         <!-- Formulário de Cadastro -->
         <form id="formCadastro" action="/salvar-cadastro" method="POST">
             <div class="input-group">
@@ -45,7 +45,7 @@
 
         <!-- Link para login -->
         <p class="login-link">Já tem uma conta? <a href="tela_de_login.html">Faça login</a></p>
-        <div id="mensagemVerificacao" class="mensagemVerificacao"></div>
+        <!-- <div id="mensagemVerificacao" class="mensagemVerificacao"></div> -->
     </div>
     <script src="script/cadastro.js"></script>
 </body>
