--- a/tela_de_login.html
+++ b/tela_de_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - gerenciador de tarefas</title>
-    <link rel="stylesheet" href="/styles/css-estilo_login.css"> <!-- Arquivo CSS externo -->
+    <link rel="stylesheet" href="/styles/tela_de_login.css"> <!-- Arquivo CSS externo -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
@@ -18,8 +18,8 @@
     </div>
 
     <div class="login-form">
-
         <!-- Formulário de Login -->
+         <h1>Login</h1>
         <form id="formLogin" action="/salvar-login" method="POST">
             <div class="input-group">
                 <label for="email">E-mail</label>
@@ -36,7 +36,7 @@
 
         <!-- Link para cadastro -->
         <p class="signup-link">Ainda não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
-        <div id="mensagemVerificacao" class="mensagemVerificacao"></div>
+        <!-- <div id="mensagemVerificacao" class="mensagemVerificacao"></div> -->
     </div>
     <script src="script/tela_de_login.js"></script>
 </body>
