Criação da pagina novidades

--- a/novidades.html
+++ b/novidades.html
@@ -15,6 +15,31 @@
         </div>
         <h1>Novidades</h1>
     </header>
+
+    <main>
+        <div class="section novidades">
+            <h2>Novidades adicionadas:</h2>
+            <br>
+            <p>Cadastro e Login do usuário</p>
+            <p>Pagina home</p>
+
+        </div>
+
+        <div class="section emBreve">
+            <h2>Em breve:</h2>
+            <br>
+            <p>Mapa interativo com geolocalização</p>
+            <p>Sistema de pontuação e gamificação, com ranking mensal e prêmios simbólicos (So ganha pontos se a denúncia for válida)</p>
+            <p>Votação para priorizar problemas já existentes</p>
+            <p>O usuário poder avaliar o serviço que foi prestado</p>
+            <p>Acessibilidade para todos (leitura com áudio, fonte ampliada, tradução )</p>
+            <p>Registro do problema atraves de fotos e da descrição do usuário</p>
+            <p>Envio de denúncia </p>
+            <p>Acompanhamento da denúncia que o usuário fez</p>
+
+        </div>
+
+
     <footer>
         <p>&copy; 2025 Cidadão Ambiental. Todos os direitos reservados.</p>
     </footer>
